@@ -1,6 +1,7 @@
 *** WooCommerce Payments Changelog ***
 
 = 1.x.x - 2020-xx-xx =
+* Fix - Support checkout on Internet Explorer 11.
 * Add - Display payment method details on account subscriptions pages.
 * Add - Redact sensitive data before logging.
 
